--- a/config/locales/frontpage.ar.yml
+++ b/config/locales/frontpage.ar.yml
@@ -28,8 +28,8 @@ ar:
         header: '١. ناقش الأمور بالتفصيل'
         desc: 'إبدأ نقاشا حول أي موضوع وقم بدعوة المهتمين به للمناقشة. شاركوا وجهات نظر متنوعة وحسنوا الأفكار سوية.'
       step2:
-        header: '٢. إعملوا على بناء التوافق'
-        desc: 'يمكن لأي شخص اقتراح مسار للعمل. بالمقابل يمكن للمشاركين إختيار إما الموافقة، أو الامتناع عن التصويت، أو الإختلاف، أو الإعتراض - هكذا تستطيع أن ترى كيف يشعر الجميع ولماذا.'
+        header: '٢. إعملوا على بناء إتفاق'
+        desc: 'يمكن لأي شخص في المجموعه صياغة اقتراح معين. المشاركين بالقرار  يمكنهم إتخاذ احد الخيرات التالية: الموافقة، أو الامتناع عن التصويت، أو الرفض، أو الإعتراض اي منع الأقتراح - هكذا تستطيع أن ترى كيف يشعر الجميع ولماذا.'
       step3:
         header: '٣. قرروا سوية'
         desc: 'طوروا الإقتراح سوية حتى يصبح مناسبا للجميع. كل قرار له مهلة محددة، وبذلك يمكن ضمان التوصل لنتيجة محددة.'
@@ -42,7 +42,7 @@ ar:
       header_html: 'سيعمل Loomio 1.0 على مختلف الأجهزة، وسيكون مبنيا على أفضل <strong>التقنيات المفتوحة للأجهزة النقالة.<strong>'
     quote:
       header:
-        rushkoff_html: '"Loomio <strong>يحرر إمكانات الإنترنت</strong> في جمع الناس سوية نحو الإجماع توافق الآراء بدلا من الجدل المستقطب."<div class="attributation">– <a href="http://rushkoff.com">دوغلاس رشكوف</a>، مؤلف كتاب  <em>صدمة الحاضر</em>'
+        rushkoff_html: '"Loomio <strong>يحرر إمكانات الإنترنت</strong> لجلب الناس سوية نحو توافق الآراء بدلا من الجدل المستقطب."<div class="attributation">– <a href="http://rushkoff.com">دوغلاس رشكوف</a>، مؤلف كتاب  <em>صدمة الحاضر</em>'
         sifry_html: '"يحقق Loomio توازنا جميلا بين <strong>الرأي الفردي</strong> و<strong>القرار الجماعي</strong>."<div class="attributation">– مايكا سيفري، محررة <em><a href="http://techpresident.com">TechPresident</a></em></div>'
     team:
       header: 'عن Loomio'
@@ -50,10 +50,10 @@ ar:
     ideals:
       community:
         header: 'جمعية تعاونية مدفوعة من قبل المجتمع المحلي'
-        desc: 'Loomio مبني من قبل شركة تعاونية يملكها العاملون فيها. نحن مؤسسة اجتماعية تعمل على تحقيق أقصى قدر من التأثير الاجتماعي الإيجابي، وليس الربح.'
+        desc: 'Loomio مبني كشركة تعاونية يملكها العاملون فيها. نحن مؤسسة اجتماعية تعمل على تحقيق أقصى قدر من التأثير الاجتماعي الإيجابي، وليس الربح.'
       independent:
         header: 'مستقل وحيادي'
-        desc: 'نؤمن مساحة لأي مجموعة للعمل سوية، وبشكل مستقل عن أية مصالح سياسية أو تجارية. لن نقوم أبدا بيع بياناتكم.'
+        desc: 'نؤمن مساحة لأي مجموعة للعمل سوية، وبشكل مستقل عن أية مصالح سياسية أو تجارية. لن نقوم أبدا ببيع بياناتكم.'
       open:
         header: 'حر ومفتوح المصدر'
         desc: 'إن كود Loomio هو مورد عام يمكن لأي شخص تشغيله، وقراءته، والتعلم منه، وتعديله وإعادة توزيعه.'
