basic inbox dropdown with pies, infinitescroll lobbed onto the discussion page

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -9,6 +9,8 @@ en:
       like: 'Like'
       unlike: 'Unlike'
       cancel: 'Cancel'
+  inbox:
+    latest_threads: 'Latest threads'
 
   vote_form:
     i_agree: 'I agree'
