--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -10,6 +10,12 @@ en:
       unlike: 'Unlike'
       cancel: 'Cancel'
 
+  session_form:
+    email_label: 'Email:'
+    password_label: 'Password:'
+    remember_me: 'Remember Me'
+    sign_in: 'Login'
+
   vote_form:
     i_agree: 'I agree'
     i_abstain: 'I abstain'
