--- a/config/locales/frontpage.he.yml
+++ b/config/locales/frontpage.he.yml
@@ -10,9 +10,9 @@ he:
       press: 'לחצו'
       try_it: 'נסו כעת'
       log_in: 'התחברות'
-      video: "צפו כיצד לומיו פועל"
-      try_loomio_beta: 'קחו את לומיו לנסיעת מבחן'
-      check_out_loomio_beta: 'נסו את גרסת הבטא של לומיו'
+      video: "צפו כיצד Loomio פועל"
+      try_loomio_beta: 'קחו את Loomio לנסיעת מבחן'
+      check_out_loomio_beta: 'נסו את Loomio בטא'
       more: 'עוד'
       top: 'למעלה'
       public_groups: 'קבוצות ציבוריות'
@@ -21,7 +21,7 @@ he:
       services: 'שירותים'
     hero:
       head_html: 'העולם זקוק לדרך טובה יותר <strong>לקבל החלטות ביחד</strong>.'
-      desc_html: 'לומיו הוא תוכנה חינמית <a href="https://github.com/loomio/loomio">מבוססת קוד פתוח</a> שנועדה לאפשר לכל אחד, בכל מקום, להשתתף בהחלטות שמשפיעות עליו או עליה'
+      desc_html: 'Loomio הוא תוכנה חינמית <a href="https://github.com/loomio/loomio">מבוססת קוד פתוח</a> שנועדה לאפשר לכל אחד, בכל מקום, להשתתף בהחלטות שמשפיעות עליו או עליה'
     product:
       header_html: 'כשאנחנו שומעים <strong>את כל הקולות </strong>, אנחנו מקבלים <strong>החלטות טובות יותר</strong>.'
       step1:
@@ -37,28 +37,28 @@ he:
       header: 'אנחנו נעזרים במימון ציבורי על מנת לסיים לבנות את המערכת החדשה ולהעניק אותה לעולם'
     prototype:
       header_html: "כבר בנינו אבטיפוס, ואנשים מכל רחבי העולם עושים דברים מדהימים איתו"
-      subhead_html: '<a href="%{try_loomio_link}">נסו את לומיו בטא</a> כעת. אתם יכולים גם <a href="%{donate_link}">לתמוך בפרוייקט</a> ולעזור במימון לומיו 1.0'
+      subhead_html: '<a href="%{try_loomio_link}">נסו את Loomio בטא</a> כעת. אתם יכולים גם <a href="%{donate_link}">לתמוך בפרוייקט</a> ולעזור במימון לומיו 1.0'
     mobile:
-      header_html: 'לומיו 1.0 יעבוד על כל מכשיר עם  <strong>טכלוגיית קוד פתוח לניידים</strong> הטובה ביותר'
+      header_html: 'Loomio 1.0 יעבוד על כל מכשיר עם  <strong>טכלוגיית קוד פתוח לניידים</strong> הטובה ביותר'
     quote:
       header:
-        rushkoff_html: '“לומיו <strong>ממצה את את הפוטנציאל של האינטרנט </strong> להביא אנשים לידי קונצנזוס במקום לדיון מקוטב”<div class="attributation">– <a href="http://rushkoff.com">דאגלאס ראשקוף</a>, מחבר <em>Present Shock</em></div>'
-        sifry_html: '“לומיו פוגעת בדיוק במטרה בין <strong>הקול האינדיבידואלי</strong> ו<strong>החלטות שיתופיות </strong>.”<div class="attributation">– מיכה סיפרי, עורך, <em><a href="http://techpresident.com">TechPresident</a></em></div>'
+        rushkoff_html: '“Loomio <strong>ממצה את את הפוטנציאל של האינטרנט </strong> להביא אנשים לידי קונצנזוס במקום לדיון מקוטב”<div class="attributation">– <a href="http://rushkoff.com">דאגלאס ראשקוף</a>, מחבר <em>Present Shock</em></div>'
+        sifry_html: '“Loomio פוגעת בדיוק במטרה בין <strong>הקול האינדיבידואלי</strong> ו<strong>החלטות שיתופיות </strong>.”<div class="attributation">– מיכה סיפרי, עורך, <em><a href="http://techpresident.com">TechPresident</a></em></div>'
     team:
-      header: 'אודות לומיו'
+      header: 'אודות Loomio'
       desc: 'אנחנו צוות קטן של מפתחי קוד הפתוח ופעילים צדק חברתי הפועל בEnspiral בAotearoa שבניו זילנד, עם רשת רחבה יותר של חברים, תומכים ויועצים בכל רחבי העולם.'
     ideals:
       community:
         header: 'התאגדות מבוססת קהילה'
-        desc: 'לומיו נבנה על-ידי התאגדות בבעלות-העובדים. אנחנו יוזמה חברתית שפועלת למקסם השפעה חברתית, לא רווח.'
+        desc: 'Loomio נבנה על-ידי התאגדות בבעלות-העובדים. אנחנו יוזמה חברתית שפועלת למקסם השפעה חברתית, לא רווח.'
       independent:
         header: 'עצמאי וניטראלי'
         desc: 'אנחנו מספקים מקום חף מאינטרסים פוליטיים וכלכליים שייתן לכל קבוצה לבוא יחדיו. לעולם לא נמכור את המידע שלך.'
       open:
         header: 'תוכנה פתוחה וחינמית'
-        desc: 'הקוד של לומיו הוא משאב ציבורי שכל אחד יכול להריץ, לקרוא וללמוד ממנו, לשנותו ולשווקו מחדש.'
+        desc: 'הקוד של Loomio הוא משאב ציבורי שכל אחד יכול להריץ, לקרוא וללמוד ממנו, לשנותו ולשווקו מחדש.'
       gift:
         header: 'כלכלת מתנות'
-        desc: 'לומיו נתמכת על ידי אלו שידם משגת ובכך אנחנו שומרים על המערכת נקייה מפרסומות וזמינה לכל הקבוצות ללא עלות'
+        desc: 'Loomio נתמכת על ידי אלו שידם משגת ובכך אנחנו שומרים על המערכת נקייה מפרסומות וזמינה לכל הקבוצות ללא עלות'
     vision:
       header: 'עזרו לנו להפוך חזון זה למציאות'
