--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -4,7 +4,7 @@ he:
       edit:
         title: 'העדפות דואל'
         when_do_you_want_emails: 'שלח לי דואל:'
-        email_missed_yesterday: "'אתמול בלומיו' - סיכום יומי של הפעילויות שהחמצתי"
+        email_missed_yesterday: "'אתמול בLoomio' - סיכום יומי של הפעילויות שהחמצתי"
         email_when_mentioned: "כשאני @מאוזכר"
         email_followed_threads: "כשיש פעילות בשיחות שאני עוקב"
         email_when_proposal_closing_soon: "24 שעות לפני סגירת הצעה"
@@ -14,12 +14,12 @@ he:
   explore:
     header: "גלו קבוצות ציבוריות"
   try_it:
-    header: "נסו את לומיו"
+    header: "נסו את Loomio"
     start_a_group: "צרו קבוצה וקבלו החלטות בקהילה שלכם"
-    join_the_community: "הצטרפו לקבוצת הקהילה של לומיו"
-    loomio_community_info: "כאן אנו מתדיינים ומקבלים החלטות בנוגע ללומיו"
-    explore_groups: "גלו קבוצות אחרות בלומיו"
-    explore_groups_info: "בדקו את כל הקבוצות המדהימות בלומיו והצטרפו אליהן!"
+    join_the_community: "הצטרפו לקבוצת הקהילה של Loomio"
+    loomio_community_info: "כאן אנו מתדיינים ומקבלים החלטות בנוגע לLoomio"
+    explore_groups: "גלו קבוצות אחרות בLoomio"
+    explore_groups_info: "בדקו את כל הקבוצות המדהימות בLoomio והצטרפו אליהן!"
   activerecord:
     errors:
       messages:
@@ -45,6 +45,7 @@ he:
       no_invitations_remaining: "לא נותרו הזמנות"
     mailer:
       invitation_instructions:
-        subject: 'מישהו הזמין אותך להצטרף לקבוצת הלומיו שלו'
+        subject: 'מישהו הזמין אותך להצטרף לקבוצת הLoomio שלו'
   error:
     access_denied: "אין לך הרשאות לעשות זאת."
+  translate: "עזרו בתרגום Loomio!"
