--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -317,10 +317,11 @@ tr:
     c9: Yorumları sil.
     c10: Alt gruplar oluştur.
     c11: Müzakereleri başlat.
-    c12: Önerileri arttır.
+    c12: Öneriler üretin.
     c13: Önerileri oyla.
     m5: Herhangi bir müzakere'nin içerik ve başlığını düzenle.
     m6: Kullanıcıların, koordinatör olabileceği bir alt grup başlatın.
+    m8: Öneriler üretin ve önerilere iştirak edin.
   discussion_privacy:
     private: Bu müzakere, grup üyelerine özeldir
   group_privacy:
@@ -403,7 +404,9 @@ tr:
       click_to_follow: "Grubu takip etmek için tıkla"
       click_to_unfollow: "Grubu takip etmeyi bırakmak için tıkla"
       following_details: "Bu grupta ki her konu hakkında bilgilendirileceksiniz."
+      not_following_details: "İştirak ettiğiniz konular hakkında bilgilendirileceksiniz."
   group_request:
+    beta_request_header: "Loomio Beta'da bir grup başlat."
     neighbourhood_support_group: "Örnek: Komşu Destek Grubu"
     please_select_an_option: Lütfen, bir opsiyon seçin
     confirmation:
