--- a/config/locales/language_names.en.yml
+++ b/config/locales/language_names.en.yml
@@ -23,6 +23,7 @@ en:
   ro: Romanian
   sr: Serbian (latin)
   "sr-RS": Serbian (cyrillic)
+  sk: Slovak
   sv: Swedish
   vi: Vietnamese
   tr: Turkish
