--- a/config/locales/native_language_names.yml
+++ b/config/locales/native_language_names.yml
@@ -23,6 +23,7 @@ en:
     'nl-NL': Nederlands
     'pt-BR': Português (Brasil)
     ro: Română
+    sK: slovenčina
     sr: Srpski - Latinica
     'sr-RS': Srpski - Ćirilica
     sv: Svenska
