--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -407,6 +407,7 @@ tr:
       not_following_details: "İştirak ettiğiniz konular hakkında bilgilendirileceksiniz."
   group_request:
     beta_request_header: "Loomio Beta'da bir grup başlat."
+    beta_request_description: "Loomio Beta'da karar vermeye başlamak için, ilk adım bir grup başlatmaktır."
     neighbourhood_support_group: "Örnek: Komşu Destek Grubu"
     please_select_an_option: Lütfen, bir opsiyon seçin
     confirmation:
