--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -9,6 +9,7 @@ en:
       like: 'Like'
       unlike: 'Unlike'
       cancel: 'Cancel'
+
   inbox:
     latest_threads: 'Latest threads'
 
@@ -17,6 +18,9 @@ en:
     password_label: 'Password:'
     remember_me: 'Remember Me'
     sign_in: 'Login'
+
+  comment_form:
+    edit_comment: 'Edit comment'
 
   vote_form:
     i_agree: 'I agree'
@@ -62,8 +66,17 @@ en:
     liked_by_names_and_name: 'Liked by {{joinedNames}} and {{name}}.'
     started_by: 'Started by <strong>{{name}}</strong>'
 
+  delete_comment_dialog:
+    title: 'Delete comment'
+    question: 'Are you sure you want to delete this comment?'
+    confirm: 'Delete comment'
+
   new_comment_item:
+    context_menu:
+      edit_comment: 'Edit comment'
+      delete_comment: 'Delete comment'
     in_reply_to: '<strong>{{author}}</strong> in reply to <strong>{{recipient}}</strong>'
+
   new_vote_item:
     agree: '<strong>{{name}}</strong> agreed.'
     abstain: '<strong>{{name}}</strong> abstained.'
