--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -64,6 +64,15 @@ en:
     invite_members: 'Invite Members'
     show_more: 'Show more...'
 
+  invitation:
+    invite_people: 'Invite People'
+    find_people: 'Find people'
+    import_contacts: 'Import contacts'
+    instructions: 'Type names or email addresses for people you want to invite'
+    invitation_message: 'Invitation Message'
+    send_invite: 'Send invites'
+    to: 'to'
+
   discussion:
     you_like_this: 'You like this.'
     liked_by_you_and_someone: 'You and {{name}} like this.'
