--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -42,6 +42,15 @@ en:
     details_label: 'Details'
     details_placeholder: "Give enough detail so everyone knows exactly what it means to agree or disagree or whatever"
 
+  discussion_form:
+    new_discussion_title: 'Start a thread'
+    edit_discussion_title: 'Edit discussion'
+    title_label: 'Title'
+    title_placeholder: 'What is the topic you want to discuss?'
+    context_label: 'Context'
+    context_placeholder: 'Give enough background information for the group to have a productive discussion. This can be updated as the discussion progresses'
+    privacy_label: 'Privacy'
+
   proposal_card:
     your_position: 'Your Position'
     have_your_say: 'Have your say'
